--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>5 Day Weather Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="./Develop/CSS/style.css"/>
+    <script src="./Develop/JavaScript/script.js"></script>
   </head>
 
   <body>
