Past searches working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <button type="submit">Search</button>
     </form>
 
-    <div id="past-searches"></div>
+    <div id="past-searches">
+      <span style="text-decoration: underline; font-weight: bold; font-size: large;">Past Searches:</span> 
+      <br />
+    </div>
     <div id="weather-results"></div> 
     </style>
   </body>
